@@ -4,6 +4,8 @@ version 0.11.0-pre7:
 	* Can build RPMs as non-root
 	* New yahoo library (can use HTTP proxy)
 	* Command-line arg to specify config file
+	* Can view all conversations in one tabbed window
+	* Tooltips on links work again
 
 version 0.11.0-pre6 (03/06/2001):
 	* Fixed bug with NAS support
